# mcp-nav

./: .dockerignore  .gitignore  Dockerfile  README.docker.md  README.md  docker-compose.yml  docker-run.sh  mcp_sse_server.py  pyproject.toml
app/: __init__.py  __main__.py  dependencies.py  main.py
app/core/: config.py
app/models/: base.py  user.py
app/repositories/: base.py  mongo.py
app/routes/: user.py
app/services/: base.py  user.py
examples/: search_and_navigate.py
tests/: __init__.py  test_navigator.py
