[tool.poetry]
name = "mcp_nav"
version = "0.1.0"
description = "Servidor MCP SSE para navegar modelcontextprotocol.io"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "app"},
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
requests = "^2.31.0"
mcp = "^1.3.0"
beautifulsoup4 = "^4.12.2"
uvicorn = "^0.29.0"
starlette = "^0.36.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcp-nav = "app.__main__:main" 