[tool.poetry]
name = "mcp-nav"
version = "0.2.0"
description = "Servidor MCP para navegar modelcontextprotocol.io"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "app"},
]

[tool.poetry.dependencies]
python = "^3.8"
mcp = "^1.3.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
uvicorn = "^0.27.0"
html2text = "^2020.1.16"
starlette = "^0.36.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcp-nav = "app.__main__:main" 