[tool.poetry]
name = "mcp-nav"
version = "0.3.0"
description = "Servidor MCP para navegar modelcontextprotocol.io con características avanzadas"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "app"},
]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.3.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
uvicorn = "^0.27.0"
html2text = "^2020.1.16"
starlette = "^0.36.0"
redis = "^5.0.1"
elasticsearch = "^8.12.1"
pyjwt = "^2.8.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcp-nav = "app.__main__:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
disable = ["C0111", "C0103"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"] 